--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+v1.0.11
+- Set minimum requirement to python 3.8
+v1.0.10
+- Improve formatting
 v1.0.9
 - Fix exception() calls to show stacktrace
 - Turn off help in parser and expose so
