--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+v1.0.12
+- Properly decode argument to number or string
+- Make default level from CLI = None
 v1.0.11
 - Set minimum requirement to python 3.8
 v1.0.10
