--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,5 @@
+v1.1.0
+- Allow users to set their own stacklevel
 v1.0.12
 - Properly decode argument to number or string
 - Make default level from CLI = None
