--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,5 @@
+v2.0.1
+- Close read pipe when pipeLogger is closed
 v2.0.0
 - Remove all import-time side effects: Users must now
   call `logistro.betterConfig()` manually.
